# sirabas-scraping

./: .gitignore  README.md  main.py  pyproject.toml
.cursor/rules/: uv.mdc
.taskmaster/: config.json  state.json
.taskmaster/docs/: prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
config/: config.yaml  env.template  logging.yaml
src/: main.py
src/utils/: config.py
